title url change 1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </Style>
     </head>
     <body>
-        <div class="title"><h2><a href="https://kutaku.github.io/webglgameManual1/" rel="noopener noreferrer">制作ゲームについて</a></h2></div>
+        <div class="title"><h2><a href="https://kutaku.github.io/GrayBirdsManManual/" rel="noopener noreferrer">制作ゲームについて</a></h2></div>
         <div class="subtitle">私が制作したゲームについての詳細です</div><br>
         <div class="main">
             <p>
