--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 ・OS：Windows10Home ノートパソコン<br>
                 ・動作確認ブラウザ：Google Chrome、Firefox<br>
                 ・使用プログラム言語：C#<br>
-                ・使用ソフトウェア：Unity、VisualStudio、サクラエディタ、Aseprite<br>
+                ・使用ソフトウェア：Unity、VisualStudio、Aseprite<br>
                 ・BGM/SE：魔王魂様、OtoLogic様、On-Jin ～音人～様、効果音ラボ様<br>
                 ・フォント：自家製ドットフォントシリーズ<br>
                 <br><hr>
