--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/earlyaccess/kokoro.css" rel="stylesheet">
         <Style>
-            body {background-color: #dedede;/*背景色を薄い色にする*/}
+            body {background-color: #90a4ae;/*背景色を薄い色にする*/}
             .title h2, .title a:link, .title a:visited, .title a:hover, .title a:active {color: black; font-size: 32px; text-align: center;}
             .subtitle {text-align: center;}
-            h4{padding: 0.5em 0.5em;/*文字の上下 左右の余白*/ color: #505050;/*文字色*/ background: #dedede;/*背景色*/ 
+            h4{padding: 0.5em 0.5em;/*文字の上下 左右の余白*/ color: #505050;/*文字色*/ background: #90a4ae;/*背景色*/ 
             border-left: solid 5px #505050;/*左線*/ border-bottom: solid 3px #d7d7d7;/*下線*/}
         </Style>
     </head>
