--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="subtitle">私が制作したゲームについての詳細です</div><br>
         <div class="main">
             <p>
-                <br><hr>
+                <br><hr color="#505050">
                 <h4 id="Development">開発環境</h4>
                 <img src="Image/developmentICON1bj.jpg" width=480 height=270 alt="developmentImgJpg"><br>
                 ・OS：Windows10Home ノートパソコン<br>
@@ -26,7 +26,7 @@
                 ・使用ソフトウェア：Unity、VisualStudio、Aseprite<br>
                 ・BGM/SE：魔王魂様、OtoLogic様、On-Jin ～音人～様、効果音ラボ様<br>
                 ・フォント：自家製ドットフォントシリーズ<br>
-                <br><hr>
+                <br><hr color="#505050">
                 <h4 id="ProductionGame1">制作ゲーム：<font color="#455a64">GrayBirdsMan</font></h4>
                 <img src="Image/gbm480x270j.jpg" width=480 height=270 alt="GrayBirdsManImgJpg"><br>
                 <br>
