--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             body {background-color: #90a4ae;/*背景色を薄い色にする*/}
             .title h2, .title a:link, .title a:visited, .title a:hover, .title a:active {color: black; font-size: 32px; text-align: center;}
             .subtitle {text-align: center;}
-            h4{
-                position: relative; padding: 1rem 1.5rem;
+            h3{
+                position: relative; padding: 1rem 1.5rem; color: #505050;
 	            border: 1px solid #505050; border-top: 4px solid #505050;
 	            background: linear-gradient(#90a4ae 0%, #90a4ae 100%);
             }
@@ -21,7 +21,7 @@
         <div class="main">
             <p>
                 <br>
-                <h4 id="Development">開発環境</h4>
+                <h3 id="Development">開発環境</h3>
                 <img src="Image/developmentICON1bj.jpg" width=480 height=270 alt="developmentImgJpg"><br>
                 ・OS：Windows10Home ノートパソコン<br>
                 ・動作確認ブラウザ：Google Chrome、Firefox<br>
@@ -30,7 +30,7 @@
                 ・BGM/SE：魔王魂様、OtoLogic様、On-Jin ～音人～様、効果音ラボ様<br>
                 ・フォント：自家製ドットフォントシリーズ<br>
                 <br>
-                <h4 id="ProductionGame1">制作ゲーム：<font color="#455a64">GrayBirdsMan</font></h4>
+                <h3 id="ProductionGame1">制作ゲーム：<font color="#455a64">GrayBirdsMan</font></h3>
                 <img src="Image/gbm480x270j.jpg" width=480 height=270 alt="GrayBirdsManImgJpg"><br>
                 <br>
                 ・1分の動画にまとめました。<br>
