add body margin

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/earlyaccess/kokoro.css" rel="stylesheet">
         <Style>
-            body {background-color: #90a4ae;/*背景色を薄い色にする*/}
+            body {background-color: #90a4ae; margin: 25px; padding: 0;}
             .title h2, .title a:link, .title a:visited, .title a:hover, .title a:active {color: black; font-size: 32px; text-align: center;}
             .subtitle {text-align: center;}
-            h3{
-                position: relative; padding: 1rem 1.5rem; color: #505050;
+            h3{ position: relative; padding: 1rem 1.5rem; color: #505050;
 	            border: 1px solid #505050; border-top: 4px solid #505050;
-	            background: linear-gradient(#90a4ae 0%, #90a4ae 100%);
-            }
+	            background: linear-gradient(#90a4ae 0%, #90a4ae 100%);}
         </Style>
     </head>
     <body>
